syntax = "proto3";
option java_package = "com.elex.im.message.proto";
option java_outer_classname = "ErrorMessage";

//---------------------------------
//90001 统一返回错误结果Down
message ErrorMessageDown {
	enum MessageEnum {
		First = 0;
		CommondId = 90001;
	};
	uint32 errorType = 1 ; //错误类型（0.请求参数错误; 1.数据错误; 2.系统错误）
	uint32 errorDetail = 2 ; //错误细节（定义常量）
	uint32 commandId = 3 ; //指令id
}

//90002 统一返回成功结果Down
message SuccessMessageDown{
	enum MessageEnum{
		First = 0;
		CommondId = 90002;
	};
	uint32 commandId = 1 ; //指令id
}
